# accelperm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PLANNING.md  PRD.md  PSEUDOCODE.md  SCRATCHPAD.md  TASKS.md  codecov.yml  pyproject.toml  setup.cfg
.claude/commands/: refresh.md
.github/workflows/: benchmark.yml  ci.yml  test.yml
benchmarks/: __init__.py  test_config_benchmark.py
docs/: Makefile
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
src/accelperm/: __init__.py  cli.py  config.py  exceptions.py
src/accelperm/backends/: __init__.py  base.py  cpu.py  factory.py  gpu_optimized.py  mps.py
src/accelperm/core/: advanced_permutation.py  chunking.py  corrections.py  gpu_null_distributions.py  gpu_processing.py  orchestrator.py  permutation.py  statistics.py  tfce.py
src/accelperm/io/: contrast.py  design.py  nifti.py  output.py
src/accelperm/utils/: __init__.py  logging.py
testdata/randomise/: timing.txt
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_advanced_permutation.py  test_backend_base.py  test_backend_cpu.py  test_backend_factory.py  test_backend_mps.py  test_cli.py  test_cli_backend_integration.py  test_config.py  test_corrections.py  test_data_chunking.py  test_exceptions.py  test_io_contrast.py  test_io_design.py  test_io_nifti.py  test_io_output.py  test_logging.py  test_orchestrator.py  test_permutation.py  test_statistics.py  test_tfce.py
tests/validation/: __init__.py
