[metadata]
name = accelperm
version = attr: accelperm.__version__
description = GPU-accelerated permutation testing for neuroimaging data
long_description = file: README.md
long_description_content_type = text/markdown
author = Russell Poldrack
author_email = poldrack@gmail.com
url = https://github.com/poldrack/accelperm
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Medical Science Apps.
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.12
package_dir =
    = src
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
accelperm = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
max-complexity = 10
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True